src/app/localhost:4200/styles.css
/*!*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[6].rules[0].oneOf[0].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[6].rules[0].oneOf[0].use[2]!./node_modules/resolve-url-loader/index.js??ruleSet[1].rules[6].rules[1].use[0]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[6].rules[1].use[1]!./src/styles.scss ***!
  \*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
/* Settings */
/* Media Queries */
/* Media Queries Mixin */
/* Setting variables */
/* Unit spacing Variables */
/* Base */
/* Color */
/* Useful classes */
.color-darker-gray {
  color: #222222;
}
.color-light-gray {
  color: #868686;
}
/* Typography */
/* Reset */
*,
*::before,
*::after,
html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}
body {
  padding: 0;
  margin: 0;
  position: relative;
  overflow-y: scroll;
  overflow-x: hidden;
}
ul,
li,
ol {
  margin: 0;
  padding: 0;
  list-style-type: none;
  text-decoration: none;
}
p,
h1,
h1,
h3,
h4,
h5 {
  margin: 0;
  padding: 0;
  margin-block-start: 0;
  margin-block-end: 0;
  font-weight: unset;
}
a {
  text-decoration: none;
}
input,
label,
button,
textarea,
figure {
  margin: 0;
  padding: 0;
}
/* Elements */
/* Border */
/* Typography custom properties */
:root {
  --font-size: 1rem;
  /* 16px */
  --ratio: 1.333;
  /* Calculate values */
  --h4: calc(var(--font-size) * var(--ratio));
  --h3: calc(var(--h4) * var(--ratio));
  --h2: calc(var(--h3) * var(--ratio));
  --h1: calc(var(--h2) * var(--ratio));
}
/* Set typoghraphy class */
.h1 {
  font-size: var(--h1);
  font-family: "EB Garamond", serif;
}
.h2 {
  font-size: var(--h2);
  font-family: "EB Garamond", serif;
}
.h3 {
  font-size: var(--h3);
  font-family: "EB Garamond", serif;
}
.h4 {
  font-size: var(--h4);
  font-family: "EB Garamond", serif;
}
.h5 {
  font-size: 0.75rem;
  font-family: "EB Garamond", serif;
}
.typography-primary {
  font-family: "EB Garamond", serif;
}
.typography-secondary {
  font-family: "optima", serif;
}
.typography-third {
  font-family: "Raleway", sans-serif;
}
.typography-fourth {
  font-family: "Roboto", sans-serif;
}
.paragraph {
  font-size: var(--font-size);
  font-family: "optima", serif;
}
.link {
  font-size: var(--font-size);
  font-family: "optima", serif;
  text-decoration: none;
  font-style: none;
}
/* Typography styles */
.text-left {
  text-align: left;
}
.bold {
  font-weight: bold;
}
.italic {
  font-style: italic;
}
.quote {
  line-height: 3rem;
  font-size: 2rem;
  font-style: italic;
  text-align: center;
  display: flex;
  align-content: center;
}
.normal {
  font-weight: normal !important;
}
.line-height-small {
  line-height: 1.5rem;
}
.line-height-medium {
  line-height: 2rem;
}
/* Components */
#container {
  margin: 1.5rem 0;
}
#circle {
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 300px;
  /* height of container */
  object-fit: cover;
  border: 2px solid #222222;
}
#circle text {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  font-weight: bold;
}
#circle svg {
  position: absolute;
  left: 0;
  bottom: 9%;
  width: 100%;
  height: 250px;
  animation-name: rotate;
  animation-duration: 7s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}
@keyframes rotate {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0);
  }
}
/* Contact */
.contact a {
  color: unset;
}
.contact--position {
  display: grid;
  /* grid-auto-rows: 1fr; */
  grid-template-columns: 2fr 2fr;
  grid-gap: 0px 0px;
  gap: 0px 0px;
  align-content: center;
  align-items: center;
  height: 100vh;
  padding: 0 1rem;
}
@media only screen and (max-width: 768px) {
  .contact--position {
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: flex-start;
    justify-content: center;
  }
}
/* Cursor */
.cursor {
  position: relative;
  pointer-events: none;
  border-radius: 50%;
  background-color: #222222;
  --size-small: 10px;
  border: 2px solid #222222;
  opacity: 0.8;
  width: var(--size-small);
  height: var(--size-small);
  z-index: 9999;
}
@keyframes cursorAnim {
  from {
    transform: scale(1);
  }
  to {
    transform: scale(0.7);
  }
}
@keyframes cursorAnim2 {
  from {
    transform: scale(1);
  }
  to {
    transform: scale(0.4);
  }
}
@keyframes cursorAnim3 {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(3);
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}
.expand {
  animation: cursorAnim3 0.5s forwards;
  border: 1px solid #75b3aa;
}
* {
  cursor: none;
}
/* Footer */
.footer {
  background-color: #ffffff;
  padding: 0.75rem 2rem;
  width: 100vw;
  bottom: 0;
  box-shadow: 0px 0px 5px #868686;
  position: fixed;
  z-index: 999;
}
@media only screen and (max-width: 768px) {
  .footer {
    padding: 1rem 2rem;
  }
}
.footer--content {
  align-items: baseline;
  display: flex;
  color: #313030;
  justify-content: space-between;
}
@media only screen and (max-width: 768px) {
  .footer--content {
    display: block;
  }
}
@media only screen and (max-width: 768px) {
  .footer {
    display: block;
    text-align: center;
  }
}
.footer ul, .footer a {
  list-style: none;
  text-decoration: none;
}
.footer--addr {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}
/* ... */

